test - push back wrapper on profile to allow for cropped image to scroll in correct order

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -750,6 +750,10 @@ Sections
 	z-index: 1;
 }
 
+.push-back{
+	z-index:-1;
+}
+
 .module,
 .module-small,
 .module-header {
